mkdocs_tacc/tacc_readthedocs/css/tacc-theme/core-docs.css
/* TODO: Migrate some of this to TACC/Core-Styles' `core-styles.docs.css` */




/* ELEMENTS */


/* to ensure paragraph font size matches core-styles.docs.css */
/* FAQ: If ineffectual, theme.css font size may match core-styles.docs.css */
p {
  font-size: inherit; /* to overwrite theme.css */
}


/* to prevent figure image overflow */
figure {
  max-width: 100%; /* mimics theme.css `.rst-content img` */
}

/* to add border around figures */
figure {
  border: var(--global-border--normal);
}


/* For edge-case headings */
:is(h1, h2, h3, h4, h5, h6) > small,
.understate:is(h1, h2, h3, h4, h5, h6) {
    font-weight: normal;
    margin-block: 0;
}
details > summary > :is(h1, h2, h3, h4, h5, h6) {
    display: inline-block;
}


/* to prevent wrap of certain tags */
u, /* "unarticulated" demarkation of phrases that should not wrap */
code:not([class]):not(pre > *) /* free-form code lines should never wrap */ {
  white-space: nowrap;
}
u {
  text-decoration: none; /* to undo browser default */
}




/* COMPONENTS */

/* Grid */

.grid {
  display: grid;
  gap: var(--global-space--grid-gap);
  grid-template-columns: 1fr 1fr;
}


/* Headings */

/* to style text like an <h2>, <h3>, etc. */
/* FAQ: Design wants <h3> on index page, but it should NOT show in nav */
/* TODO: Either, find a solution that does not involve "fake header" class */
/* TODO: Or, support fake headers in Core (must then define margins) */
.h2 {
  /* to mimic browser */
  display: block;
  margin-block-start: 0.83em;
  margin-block-end: 0.83em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;

  /* to mimic core-styles.docs */
  font-size: var(--global-font-size--xx-large);
  font-weight: var(--bold);
}
.h3 {
  /* to mimic browser */
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;

  /* to mimic core-styles.docs */
  font-size: var(--global-font-size--x-large);
  font-weight: var(--bold);
}


/* Icons */

/* `fa-external-link` applied by `../js/tacc-theme/addIconToExternalLinks.js` */
:is(main, [role="main"]) a {
  &:not([class*="card"], .c-card) > .fa-external-link {
    margin-left: 0.25em;
  }
  &:is([class*="card"], .c-card) {
    &:has(.fa-external-link) {
      position: relative;
    }
    & > .fa-external-link {
      position: absolute;
      right: 0.25em;
      top: 0.25em;
    }
    &:not(:hover) > .fa-external-link {
      opacity: 0.5;
    }
  }
}

